# greed

./: .gitignore  Cargo.toml  README  rustfmt.toml
.github/workflows/: ci.yml
config/: base.toml  strategy.toml
crates/backtest/: Cargo.toml
crates/backtest/src/: account.rs  broker.rs  engine.rs  fees.rs  lib.rs  report.rs
crates/backtest/tests/: perf.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: clock.rs  event.rs  lib.rs  plugin.rs  types.rs
crates/data/: Cargo.toml
crates/data/src/: binance_dump.rs  lake.rs  lib.rs  live.rs  normalize.rs  schema.rs
crates/data/src/live/: binance_ws.rs  binlog.rs  book_poller.rs  config.rs  mod.rs  oi_poller.rs  shard_writer.rs  supervisor.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/signals/: Cargo.toml
crates/signals/src/: agg_delta.rs  exhaustion.rs  large_trade_flow.rs  lib.rs  obi.rs  oi_regime.rs  renko.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: assemble.rs  builtin.rs  exits.rs  filter.rs  filters.rs  fsm.rs  lib.rs  registry.rs  triggers.rs
crates/strategy/tests/: assemble_real.rs
docs/: TRDR量化系统开发手册.md
scripts/: start.sh  stop.sh
