[package]
name = "backtest"
description = "Event-driven backtest engine sharing the same code path as live trading"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core = { workspace = true }
signals = { workspace = true }
strategy = { workspace = true }
data = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }