[package]
name = "data"
description = "Data layer: historical ingest, Parquet lake, and live collectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }