[package]
name = "data"
description = "Data layer: historical ingest, Parquet lake, and live collectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tcore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true }
parquet2 = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }