[package]
name = "signals"
description = "Signal engines: renko bricks, OBI bands, aggregated delta, OI regime, exhaustion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }